==v0.0.1

- Response module is working
- Response is tested
- Base of Request module is working (Query class, sending message, actions)
- Action request are tested