@@ -1,1 +1,6 @@
-- submit a rubyforge project
+- Complete Request module
+- Complete Request module doc/test
+
+- Write doc/test for Helpers module
+- Write doc for VioletAPI module
+
