@@ -1,17 +1,13 @@
 =begin rdoc
 
 ==violet/violetapi.rb
-TODO
 
 =end
 
-
-# TODO
 module VioletAPI
 
   require File.join( File.dirname(__FILE__), "request.rb" )
   require File.join( File.dirname(__FILE__), "response.rb" )
-  require File.join( File.dirname(__FILE__), "helpers.rb" )
 
 end # VioletAPI
 
